# fridayc-antlr-llvm

./: .gitignore  CMakeLists.txt  FridayParser.g4  FridayScanner.g4  Readme.md  build.bat  compile.bat  diagram.puml  diagram.py  doc.md  friday-runtime.cpp  generate_docs.bat  stats.py  table.json  test.fx
.antlr/: FridayParser.cpp  FridayParser.h  FridayParser.interp  FridayParser.tokens  FridayParserBaseListener.cpp  FridayParserBaseListener.h  FridayParserListener.cpp  FridayParserListener.h  FridayScanner.interp  FridayScanner.java  FridayScanner.tokens
docs/: TypeSystem.puml
examples/: ArrayList.fr  ArrayList.ll  C.fr  C.ll  Libc.fr  LinkedList.fr  Math.fr  discovery.json
include/: Annotation.hpp  Annotation.inl  ArrayType.hpp  Attributes.hpp  Benchmark.hpp  Benchmark.inl  BinaryOperatorBuilder.hpp  Builder.hpp  Common.hpp  Common.inl  CompilationContext.hpp  Console.hpp  Console.inl  Core.hpp  Core.inl  DiscoveryVisitor.hpp  Error.hpp  Error.inl  ErrorType.hpp  FormatString.hpp  FormatString.inl  Friday.hpp  Function.hpp  FunctionType.hpp  InvalidArgumentError.hpp  InvalidArgumentError.inl  Json.hpp  LLVMObjectEmitterVisitor.hpp  LinkerVisitor.hpp  MangledNameBuilder.hpp  Namespace.hpp  NamespaceBindingVisitor.hpp  NamespaceType.hpp  NonCopyable.hpp  NotImplementedError.hpp  NotImplementedError.inl  NullPointerError.hpp  NullPointerError.inl  OperationNotSupportedError.hpp  OperationNotSupportedError.inl  (+40 more)
src/: ArrayType.cpp  BinaryOperatorBuilder.cpp  Client.cpp  Cmd.cpp  Common.cpp  CompilationContext.cpp  Compiler.cpp  Config.cpp  Console.cpp  ErrorType.cpp  (+53 more)
(+436 files in other folders)
